fixed javascript dependency

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "multinivel_modas",
   "private": true,
   "dependencies": {
+    "@babel/compat-data": "^7.11.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
+    "@rails/webpacker": "^5.2.1",
     "jquery": "^3.5.0",
     "jquery-mask-plugin": "^1.14.16",
     "rails-erb-loader": "^5.5.2",
